fix: align line-height to our CSS

--- a/packages/charts/src/chart_types/metric/renderer/dom/_text.scss
+++ b/packages/charts/src/chart_types/metric/renderer/dom/_text.scss
@@ -16,6 +16,7 @@
   grid-template-columns: 100%;
   grid-template-rows: min-content min-content auto min-content min-content;
   text-align: left;
+  line-height: 1.2;
   &__title {
     font-weight: 400;
   }
